# py-dir-fake-users-from-channel

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  run.py
reports/: report_@xsa_logs_20251129_180516.txt  report_@xsa_logs_20251129_181918.txt
src/py_dir_fake_users_from_channel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/telegram_scanner/: __init__.py  analyzer.py  checkpoint_manager.py  config.py  database.py  deleter.py  exporter.py  main.py  reporter.py
test/: test_database_large.py  test_e2e_mock.py
